Bug 55885 - CRASH when FILESAVE particular .ods after deletion of rows
Summary: CRASH when FILESAVE particular .ods after deletion of rows
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.2.1 rc
Hardware: All All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:3.7.0 target:3.6.3
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-11 20:01 UTC by VLB
Modified: 2012-10-28 21:13 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
test file where the crash is reproducible (22.05 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-10-11 20:01 UTC, VLB
Details
bt on master (11.03 KB, text/plain)
2012-10-12 23:22 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description VLB 2012-10-11 20:01:39 UTC
Created attachment 68453 [details]
test file where the crash is reproducible

When i delete the rows 1 to 20 in the file in the attachment and i try to save, LO crash.

LO 3.6.2.2 windows 7 64 bits
LO 3.6.4 in the daily build is to crash
Comment 1 billhook 2012-10-11 23:59:47 UTC
Confirmed on Windows Vista 32 bit running LO 3.6.2.2.

Note that saving the document without modifying it *doesn't* crash LO.
Comment 2 VLB 2012-10-12 13:04:01 UTC
In LO 3.5.6.2 windows 7 64 bits it doesn't crash.
Comment 3 Julien Nabet 2012-10-12 23:22:12 UTC
Created attachment 68504 [details]
bt on master

On pc Debian x86-64 with master sources updated today, I reproduced the problem.
Attached bt.
Comment 4 Not Assigned 2012-10-13 02:35:31 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2ec03fc221e80479557f05f53972ca864f1ff4bb

don't insert notes from deleted cells, fdo#55885



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Not Assigned 2012-10-13 17:41:18 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=04ba130525bf339f774fd17423f8656e6755ed11&g=libreoffice-3-6

don't insert notes from deleted cells, fdo#55885


It will be available in LibreOffice 3.6.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Not Assigned 2012-10-16 10:08:24 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=39e7aefe5d3645f08867c84e1c5dd08c7209a439&g=libreoffice-3-6-3

don't insert notes from deleted cells, fdo#55885


It will be available already in LibreOffice 3.6.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 VLB 2012-10-18 16:28:47 UTC
I have test LO  3.6.4.0+ (Build ID: 1bc1530) and the the issue is solved.
Thanks for the fast solution.
Comment 8 Rainer Bielefeld Retired 2012-10-25 05:14:19 UTC
Already [Reproducible] with Server Installation of "LibreOffice 3.6.2.1 release”  English UI/ German Locale [Build-ID:  da8c1e6] on German WIN7 Home Premium (64bit) (and may be more early).

Fix for "LibreOffice 3.6.3.2” German UI/ German Locale [Build-ID: 58f22d5] on German WIN7 Home Premium (64bit) works fine.

@Markus:
We can close this one? 
Can you leave some info what characteristics of the document were responsible for the crash to ease recognition of DUPlicates?
Comment 9 Markus Mohrhard 2012-10-25 09:32:34 UTC
> @Markus:
> We can close this one? 
> Can you leave some info what characteristics of the document were
> responsible for the crash to ease recognition of DUPlicates?

Happens with notes that are deleted and the address of them is updated so that they get an invalid address.

This should mostly happen when you delete the first columns/rows and they contained a note.
Comment 10 Jean-Baptiste Faure 2012-10-28 21:13:01 UTC
Due to comment #3 changed platform to all
Verified on LO 3.6.3.2

Thank you very much.