don't insert notes from deleted cells, fdo#55885

Change-Id: I036f0531dc2290c5eb480258bc70ec13b810e6bc